Added: Initial basic reset in LESS

--- a/CO5027/CO5027.csproj
+++ b/CO5027/CO5027.csproj
@@ -68,6 +68,14 @@
   <ItemGroup>
     <Content Include="packages.config" />
     <Content Include="Site.Master" />
+    <Content Include="Styles\MainStyle.css">
+      <DependentUpon>MainStyle.less</DependentUpon>
+    </Content>
+    <Content Include="Styles\MainStyle.less" />
+    <None Include="compilerconfig.json" />
+    <Content Include="compilerconfig.json.defaults">
+      <DependentUpon>compilerconfig.json</DependentUpon>
+    </Content>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -77,6 +85,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="Styles\MainStyle.min.css">
+      <DependentUpon>MainStyle.css</DependentUpon>
+    </Content>
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
