--- a/CO5027/CO5027.csproj
+++ b/CO5027/CO5027.csproj
@@ -69,6 +69,7 @@
     <Content Include="contact.aspx" />
     <Content Include="default.aspx" />
     <Content Include="packages.config" />
+    <Content Include="Scripts\google-maps.js" />
     <Content Include="Scripts\jquery-2.1.4.js" />
     <Content Include="Scripts\jquery-2.1.4.min.js" />
     <Content Include="Site.Master" />
@@ -115,6 +116,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Site.Master.designer.cs">
       <DependentUpon>Site.Master</DependentUpon>
