--- a/CO5027/Web.config
+++ b/CO5027/Web.config
@@ -1,9 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="CO5027ConnectionString" connectionString="Data Source=sql2014.studentwebserver.co.uk;Initial Catalog=db_1417800_CO5027;Persist Security Info=True;User ID=user_db_1417800_CO5027;Password=$~rGla],W8.*"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
