--- a/CO5027/Web.config
+++ b/CO5027/Web.config
@@ -9,6 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=sql2014.studentwebserver.co.uk;Initial Catalog=db_1417800_CO5027;Persist Security Info=True;User ID=user_db_1417800_CO5027;Password=$~rGla],W8.*" providerName="System.Data.SqlClient" />
     <add name="CO5027ConnectionString" connectionString="Data Source=sql2014.studentwebserver.co.uk;Initial Catalog=db_1417800_CO5027;Persist Security Info=True;User ID=user_db_1417800_CO5027;Password=$~rGla],W8.*" providerName="System.Data.SqlClient" />
     <add name="db_1417800_CO5027Entities" connectionString="metadata=res://*/EntityDataModel.csdl|res://*/EntityDataModel.ssdl|res://*/EntityDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql2014.studentwebserver.co.uk;initial catalog=db_1417800_CO5027;persist security info=True;user id=user_db_1417800_CO5027;password=$~rGla],W8.*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="DatabaseCO5027Entities" connectionString="metadata=res://*/EntityDataModel.csdl|res://*/EntityDataModel.ssdl|res://*/EntityDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql2014.studentwebserver.co.uk;initial catalog=db_1417800_CO5027;persist security info=True;user id=user_db_1417800_CO5027;password=$~rGla],W8.*;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
@@ -16,7 +17,29 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+    <authorization>
+      <allow users="*"/>
+    </authorization>
+    <authentication mode="None">
+    </authentication>
   </system.web>
+
+  <location path="user">
+    <system.web>
+      <authorization>
+        <deny users="?"/>
+      </authorization>
+    </system.web>
+  </location>
+  <location path="admin">
+    <system.web>
+      <authorization>
+        <allow roles="Admin"/>
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
