WIP: Moved email code to separate class | Added c;lass to display basket items | misc changes

--- a/CO5027/CO5027.csproj
+++ b/CO5027/CO5027.csproj
@@ -216,6 +216,7 @@
     <Compile Include="Basket.cs">
       <DependentUpon>EntityDataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="BasketDisplay.cs" />
     <Compile Include="checkout.aspx.cs">
       <DependentUpon>checkout.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -258,6 +259,7 @@
     <Compile Include="Image.cs">
       <DependentUpon>EntityDataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Email.cs" />
     <Compile Include="Models\ImageManipulation.cs" />
     <Compile Include="Models\ImageProcessing.cs" />
     <Compile Include="Order.cs">
