--- a/CO5027/Web.config
+++ b/CO5027/Web.config
@@ -7,6 +7,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="payPal" type="PayPal.SDKConfigHandler, PayPal"/>
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=sql2014.studentwebserver.co.uk;Initial Catalog=db_1417800_CO5027;Persist Security Info=True;User ID=user_db_1417800_CO5027;Password=$~rGla],W8.*" providerName="System.Data.SqlClient" />
@@ -40,6 +41,14 @@
     </system.web>
   </location>
 
+  <payPal>
+    <settings>
+      <add name="mode" value="sandbox" />
+      <add name="clientId" value="AU-R_pYkc4Re2m0jACAbseu0X4GnwIdMC3Lxd29ozuXqCfHlrQN-ZYmaJ0nqSogswQJwmOrV7dwPZPRi" />
+      <add name="clientSecret" value="EIUg7DFsw_F6jwDrZG9mf7gW5X0QkXXuATBX2nL1_Fd7azl5FwiRda_pD5OSyAaKKvEZxKcz1v23Ngcp" />
+    </settings>
+  </payPal>
+  
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
