--- a/CO5027/CO5027.csproj
+++ b/CO5027/CO5027.csproj
@@ -127,37 +127,43 @@
       <DependentUpon>EntityDataModel.edmx</DependentUpon>
       <LastGenOutput>EntityDataModel.cs</LastGenOutput>
     </Content>
-    <Content Include="files\images\1.jpg" />
-    <Content Include="files\images\2.jpg" />
-    <Content Include="files\images\4.jpg" />
-    <Content Include="files\images\5.jpg" />
-    <Content Include="files\images\6.jpg" />
     <Content Include="files\images\logo.png" />
     <Content Include="files\images\map.PNG" />
     <Content Include="files\images\original\1.jpg" />
+    <Content Include="files\images\original\12.jpg" />
+    <Content Include="files\images\original\13.jpg" />
     <Content Include="files\images\original\2.jpg" />
     <Content Include="files\images\original\4.jpg" />
     <Content Include="files\images\original\5.jpg" />
     <Content Include="files\images\original\6.jpg" />
     <Content Include="files\images\original\7.jpg" />
-    <Content Include="files\images\watermarked\1-lg.jpg" />
-    <Content Include="files\images\watermarked\1-md.jpg" />
-    <Content Include="files\images\watermarked\1-sm.jpg" />
-    <Content Include="files\images\watermarked\2-lg.jpg" />
-    <Content Include="files\images\watermarked\2-md.jpg" />
-    <Content Include="files\images\watermarked\2-sm.jpg" />
-    <Content Include="files\images\watermarked\4-lg.jpg" />
-    <Content Include="files\images\watermarked\4-md.jpg" />
-    <Content Include="files\images\watermarked\4-sm.jpg" />
-    <Content Include="files\images\watermarked\5-lg.jpg" />
-    <Content Include="files\images\watermarked\5-md.jpg" />
-    <Content Include="files\images\watermarked\5-sm.jpg" />
-    <Content Include="files\images\watermarked\6-lg.jpg" />
-    <Content Include="files\images\watermarked\6-md.jpg" />
-    <Content Include="files\images\watermarked\6-sm.jpg" />
-    <Content Include="files\images\watermarked\7-lg.jpg" />
-    <Content Include="files\images\watermarked\7-md.jpg" />
-    <Content Include="files\images\watermarked\7-sm.jpg" />
+    <Content Include="files\images\watermarked\1-1.jpg" />
+    <Content Include="files\images\watermarked\1-2.jpg" />
+    <Content Include="files\images\watermarked\1-3.jpg" />
+    <Content Include="files\images\watermarked\12-1.jpg" />
+    <Content Include="files\images\watermarked\12-2.jpg" />
+    <Content Include="files\images\watermarked\12-3.jpg" />
+    <Content Include="files\images\watermarked\13-1.jpg" />
+    <Content Include="files\images\watermarked\13-2.jpg" />
+    <Content Include="files\images\watermarked\13-3.jpg" />
+    <Content Include="files\images\watermarked\2-1.jpg" />
+    <Content Include="files\images\watermarked\2-2.jpg" />
+    <Content Include="files\images\watermarked\2-3.jpg" />
+    <Content Include="files\images\watermarked\4-1.jpg" />
+    <Content Include="files\images\watermarked\4-2.jpg" />
+    <Content Include="files\images\watermarked\4-3.jpg" />
+    <Content Include="files\images\watermarked\5-1.jpg" />
+    <Content Include="files\images\watermarked\5-2.jpg" />
+    <Content Include="files\images\watermarked\5-3.jpg" />
+    <Content Include="files\images\watermarked\6-1.jpg" />
+    <Content Include="files\images\watermarked\6-2.jpg" />
+    <Content Include="files\images\watermarked\6-3.jpg" />
+    <Content Include="files\images\watermarked\7-1.jpg" />
+    <Content Include="files\images\watermarked\7-2.jpg" />
+    <Content Include="files\images\watermarked\7-3.jpg" />
+    <Content Include="files\images\watermarked\9-1.jpg" />
+    <Content Include="files\images\watermarked\9-2.jpg" />
+    <Content Include="files\images\watermarked\9-3.jpg" />
     <Content Include="packages.config" />
     <Content Include="photo.aspx" />
     <Content Include="Scripts\google-maps.js" />
