WIP: added new account welcome email & misc changes | Started tracking BasketDisplay class

--- a/CO5027/CO5027.csproj
+++ b/CO5027/CO5027.csproj
@@ -296,6 +296,9 @@
       <DependentUpon>EntityDataModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Startup.cs" />
+    <Compile Include="UserDetail.cs">
+      <DependentUpon>EntityDataModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="user\default.aspx.cs">
       <DependentUpon>default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
