--- a/CO5027/Web.config
+++ b/CO5027/Web.config
@@ -7,7 +7,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <section name="payPal" type="PayPal.SDKConfigHandler, PayPal"/>
+    <section name="paypal" type="PayPal.SDKConfigHandler, PayPal"/>
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=sql2014.studentwebserver.co.uk;Initial Catalog=db_1417800_CO5027;Persist Security Info=True;User ID=user_db_1417800_CO5027;Password=$~rGla],W8.*" providerName="System.Data.SqlClient" />
@@ -41,13 +41,13 @@
     </system.web>
   </location>
 
-  <payPal>
+  <paypal>
     <settings>
       <add name="mode" value="sandbox" />
       <add name="clientId" value="AU-R_pYkc4Re2m0jACAbseu0X4GnwIdMC3Lxd29ozuXqCfHlrQN-ZYmaJ0nqSogswQJwmOrV7dwPZPRi" />
       <add name="clientSecret" value="EIUg7DFsw_F6jwDrZG9mf7gW5X0QkXXuATBX2nL1_Fd7azl5FwiRda_pD5OSyAaKKvEZxKcz1v23Ngcp" />
     </settings>
-  </payPal>
+  </paypal>
   
   <system.codedom>
     <compilers>
