--- a/CO5027/Web.config
+++ b/CO5027/Web.config
@@ -10,10 +10,10 @@
     <section name="paypal" type="PayPal.SDKConfigHandler, PayPal"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=sql2014.studentwebserver.co.uk;Initial Catalog=db_1417800_CO5027;Persist Security Info=True;User ID=user_db_1417800_CO5027;Password=$~rGla],W8.*" providerName="System.Data.SqlClient" />
-    <add name="CO5027ConnectionString" connectionString="Data Source=sql2014.studentwebserver.co.uk;Initial Catalog=db_1417800_CO5027;Persist Security Info=True;User ID=user_db_1417800_CO5027;Password=$~rGla],W8.*" providerName="System.Data.SqlClient" />
-    <add name="db_1417800_CO5027Entities" connectionString="metadata=res://*/EntityDataModel.csdl|res://*/EntityDataModel.ssdl|res://*/EntityDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql2014.studentwebserver.co.uk;initial catalog=db_1417800_CO5027;persist security info=True;user id=user_db_1417800_CO5027;password=$~rGla],W8.*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="DatabaseCO5027Entities" connectionString="metadata=res://*/EntityDataModel.csdl|res://*/EntityDataModel.ssdl|res://*/EntityDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql2014.studentwebserver.co.uk;initial catalog=db_1417800_CO5027;persist security info=True;user id=user_db_1417800_CO5027;password=$~rGla],W8.*;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DefaultConnection" connectionString="Data Source=______SQL-SERVER-URL______;Initial Catalog=______SQL-SERVER-DATABASE-NAME______;Persist Security Info=True;User ID=______SQL-SERVER-USER-NAME______;Password=______SQL-SERVER-USER-PASSWORD______" providerName="System.Data.SqlClient" />
+    <add name="CO5027ConnectionString" connectionString="Data Source=______SQL-SERVER-URL______;Initial Catalog=______SQL-SERVER-DATABASE-NAME______;Persist Security Info=True;User ID=______SQL-SERVER-USER-NAME______;Password=______SQL-SERVER-USER-PASSWORD______" providerName="System.Data.SqlClient" />
+    <add name="db_1417800_CO5027Entities" connectionString="metadata=res://*/EntityDataModel.csdl|res://*/EntityDataModel.ssdl|res://*/EntityDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=______SQL-SERVER-URL______;initial catalog=______SQL-SERVER-DATABASE-NAME______;persist security info=True;user id=______SQL-SERVER-USER-NAME______;password=______SQL-SERVER-USER-PASSWORD______;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DatabaseCO5027Entities" connectionString="metadata=res://*/EntityDataModel.csdl|res://*/EntityDataModel.ssdl|res://*/EntityDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=______SQL-SERVER-URL______;initial catalog=______SQL-SERVER-DATABASE-NAME______;persist security info=True;user id=______SQL-SERVER-USER-NAME______;password=______SQL-SERVER-USER-PASSWORD______;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
@@ -44,8 +44,8 @@
   <paypal>
     <settings>
       <add name="mode" value="sandbox" />
-      <add name="clientId" value="AU-R_pYkc4Re2m0jACAbseu0X4GnwIdMC3Lxd29ozuXqCfHlrQN-ZYmaJ0nqSogswQJwmOrV7dwPZPRi" />
-      <add name="clientSecret" value="EIUg7DFsw_F6jwDrZG9mf7gW5X0QkXXuATBX2nL1_Fd7azl5FwiRda_pD5OSyAaKKvEZxKcz1v23Ngcp" />
+      <add name="clientId" value="______CLIENT-ID-HERE______" />
+      <add name="clientSecret" value="______CLIENT-SECRET-HERE______" />
     </settings>
   </paypal>
   
